--- a/src/components/HistorySearch/HistorySearch.module.css
+++ b/src/components/HistorySearch/HistorySearch.module.css
@@ -3,7 +3,8 @@
     padding: 10px;
     margin-top: 10px;
     height: auto;
-    background-color: #cacaca;
+    background-color: #cfd9dd;
+    margin-bottom: 30px;
 }
 
 .button {
