--- a/src/components/Weatrher/WeatherForFiveDays.module.css
+++ b/src/components/Weatrher/WeatherForFiveDays.module.css
@@ -15,6 +15,9 @@
     border: 2px solid #249ffd;
     border-radius: 15px;
     margin-bottom: 20px;
+}
+
+.weatherCardItem:not(:last-child) {
     margin-right: 15px;
 }
 
